<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EventActivity">

    <EditText
        android:id="@+id/eventNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_name"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <EditText
        android:id="@+id/eventDateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Event Date (YYYY-MM-DD)"
        android:layout_below="@id/eventNameText"
        android:layout_marginTop="10dp"
        android:padding="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <EditText
        android:id="@+id/eventTimeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Event Time (HH:MM)"
        android:layout_below="@id/eventDateText"
        android:layout_marginTop="10dp"
        android:padding="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/addEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_event"
        android:layout_below="@id/eventTimeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/permissionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permissions"
        android:layout_below="@id/eventTimeText"
        android:layout_toEndOf="@id/addEventButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addEventButton"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_above="@+id/bottom_margin_view"/>

    <View
        android:id="@+id/bottom_margin_view"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
